# erbium

./: .gitignore  CMakeLists.txt  ErbiumConfig.cmake.in  README.md  main.c
assets/shaders/glsl/150/: default.f.glsl  default.v.glsl
contrib/: CMakeLists.txt
examples/: CMakeLists.txt  entity_test.c  main_test.c  window_test.c
include/: erbium.h  erbium_version.h  platform_detect.h
scripts/cmake/modules/: ExternalFreetype.cmake  ExternalGLEW.cmake  ExternalGLFW.cmake  ExternalLua51.cmake  ExternalOggVorbis.cmake  ExternalOpenAL.cmake  ExternalPNG.cmake  GroupByFolder.cmake  MergeStaticLibs.cmake  MergeStaticLibs.depends.c.in  MergeStaticLibsPosix.cmake.in  TargetArch.cmake  glew.cmake  libogg.cmake  libvorbis.cmake  lua51.cmake
scripts/cmake/toolchains/: toolchain.android.cmake
src/: app.c  context.c  context_glfw.c  entity.c  fs.c  graphics_glfw.c  internal.h  io.c  io_glfw.c  json.h  matrix.c  properties.c  scene.c  string_utils.c  subsystem.c  uthash.h  version.c.in
src/ccan/: check_type.h  container_of.h  list.c  list.h
src/subsystem/: subsystem_defaults.h  subsystem_renderer.c
src/subsystem/renderer/: renderer.h  renderer_gl.c
